tests/test_files/initialization_inference/move_whole_transient_use_part.stderr
error: access to uninitialized path
- initialization_inference/move_whole_transient_use_part:9:2
9 |   bar.foo = Foo(x: 44)
  |   ^^^^^^^^^^^^^^^^^^^^
